[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Camille Maumet"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "rdflib>=4.2.0",
    "rdflib-jsonld",
    "prov>=1.5.0",
    "nibabel",
    "numpy",
    "future",
    "requests",
    "pyld"
]
description = "Export of neuroimaging statistical results using NIDM as specified at http://nidm.nidash.org/specs/nidm-results.html."
# Version from setuptools_scm
dynamic = ["version"]
keywords = [
    "Prov",
    "NIDM",
    "Provenance"
]
license = {text = "MIT"}
maintainers = [{name = "Camille Maumet", email = "c.m.j.maumet@warwick.ac.uk"}]
name = "nidmresults"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
# A combination of dependencies useful for developers
dev = [
    "nidmresults[test]",
    "pre-commit"
]
# For running unit and docstring tests
test = [
    "ddt",
    "vcrpy",
    "pytest",
    "tox"
]

[project.scripts]
nidm_mkda_convert = "nidmresults.cli.nidm_mkda_convert:main"
nidmreader = "nidmresults.cli.nidmreader:main"
nidmresults = "nidmresults.cli.nidmresults:main"

[project.urls]
Development = "https://github.com/incf-nidash/nidmresults"

[tool.black]
line-length = 90

[tool.codespell]
ignore-words-list = "fwe,re-use,nd"
skip = ".git,*.pdf,*.svg"

[tool.hatch.build.hooks.vcs]
version-file = "nidmresults/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["nidmresults"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 90
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --doctest-modules --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
minversion = "6.0"
xfail_strict = true
